--- a/css/general.css
+++ b/css/general.css
@@ -26,16 +26,22 @@ PRIMARY #e67e22
 --Tints:
 #fdf2e9
 #fae5d3
---Shades: #cf711f;
+#eb984e
+--Shades: #cf711f
+#45260a
 --Accents:
 --Greys:
+#767676
+#6f6f6f
 #555
 #333
 
 05 SHADOWS
+0 2.4rem 4.8rem rgba(0, 0, 0, 0.075);
 
 06 BORDER-RADIUS
 Default: 9px
+med: 11px
 
 07 WHITESPACE
 
@@ -79,6 +85,10 @@ GENERAL COMPONENTS
     row-gap: 9.6rem;
   }
 
+  .grid:not(:last-child) {
+    margin-bottom: 9.6rem;
+  }
+
   .grid--2-cols {
     grid-template-columns: repeat(2, 1fr);
   }
@@ -89,6 +99,10 @@ GENERAL COMPONENTS
 
   .grid--4-cols {
     grid-template-columns: repeat(4, 1fr);
+  }
+
+  .grid--5-cols {
+    grid-template-columns: repeat(5, 1fr);
   }
 
   .grid--center-v {
@@ -130,7 +144,7 @@ GENERAL COMPONENTS
     letter-spacing: 0.75px;
 }
 
-.btn:link, .btn:visited {
+.btn, .btn:link, .btn:visited {
     display: inline-block;
 
     text-decoration: none;
@@ -139,7 +153,11 @@ GENERAL COMPONENTS
     padding: 1.6rem 3.2rem;
     border-radius: 9px;
 
-    transition: background-color 0.3s;
+    border: none;
+    cursor: pointer;
+    font-family: inherit;
+
+    transition: all 0.3s;
 }
 
 .btn--full:link, .btn--full:visited {
@@ -161,6 +179,71 @@ GENERAL COMPONENTS
     box-shadow: inset 0 0 0 3px #fff;
 }
 
+.btn--form {
+    background-color: #45260a;
+    color: #fdf2e9;
+    align-self: end;
+    padding: 1.2rem;
+}
+
+.btn--form:hover {
+    background-color: #fff;
+    color: #555;
+}
+
+.link:link, .link:visited {
+    display: inline-block;
+    color: #e67e22;
+    text-decoration: none;
+    border-bottom: 1px solid currentColor;
+    padding-bottom: 2px;
+    transition: all 0.3s;
+}
+
+.link:hover, .link:active {
+    color: #cf711f;
+    border-bottom: 1px solid transparent;
+}
+
+.list {
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    gap: 1.6rem;
+  }
+
+  .list-item {
+    font-size: 1.8rem;
+    display: flex;
+    align-items: center;
+    gap: 1.6rem;
+  }
+
+  .list-icon {
+    height: 3rem;
+    width: 3rem;
+    color: #e67e22;
+  }
+
+ *:focus {
+    outline: none;
+    box-shadow: 0 0 0 0.8rem rgba(230, 125, 34, 0.505);
+ }
+
+/* HELPER SETTINGS CLASSES */
+
 .margin-right-sm {
     margin-right: 1.6rem !important;
+}
+
+.margin-bottom-md {
+    margin-bottom: 4.8rem !important;
+}
+
+.center-text {
+    text-align: center;
+}
+
+strong {
+    font-weight: 500;
 }
