--- a/css/general.css
+++ b/css/general.css
@@ -15,6 +15,7 @@ Default: 1
 small: 1.05
 med: 1.2
 paragraph: 1.6
+Large: 1.8
 
 --LETTER SPACING
 -0.5px
@@ -59,6 +60,7 @@ med: 11px
 
 html {
     font-size: 62.5%;
+    overflow-x: hidden;
 }
 
 body {
@@ -66,6 +68,7 @@ body {
     line-height: 1;
     font-weight: 400;
     color: #555;
+    overflow-x: hidden;
 }
 
 
@@ -217,6 +220,7 @@ GENERAL COMPONENTS
     display: flex;
     align-items: center;
     gap: 1.6rem;
+    line-height: 1.2;
   }
 
   .list-icon {
