--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ HEADER SECTION
     /* because we want to sticky later */
     height: 9.6rem;
     padding: 4.8rem;
+    position: relative;
 }
 
 .logo {
@@ -24,7 +25,7 @@ NAVIGATION
     list-style: none;
     display: flex;
     align-items: center;
-    gap: 3.2rem;
+    gap: 4.8rem;
 }
 
 .main-nav-link:link, .main-nav-link:visited {
@@ -49,6 +50,26 @@ NAVIGATION
 
 .main-nav-link.nav-cta:hover, .main-nav-link.nav-cta:active {
     background-color: #cf711f;
+}
+
+/* MOBILE */
+
+.btn-mobile-nav {
+ border: none;
+ background: none;
+ cursor: pointer;
+
+ display: none;
+}
+
+.icon-mobile-nav {
+    height: 4.8rem;
+    width: 4.8rem;
+    color: #777;
+}
+
+.icon-mobile-nav[name="close-outline"] {
+    display: none;
 }
 
 /*****************
