--- a/css/queries.css
+++ b/css/queries.css
@@ -115,11 +115,16 @@ BELOW 940PX (TABLETS)
         margin-top: 1.2rem;
     }
 
+    /* MOBILE NAVIGATION */
     .btn-mobile-nav {
         display: block;
+        z-index: 9999;
     }
 
     .main-nav {
+        background-color: rgba(255, 255, 255, 0.6);
+        -webkit-backdrop-filter: blur(10px);
+        backdrop-filter: blur(10px);
         position: absolute;
         top: 0;
         left: 0;
@@ -151,7 +156,7 @@ BELOW 940PX (TABLETS)
         opacity: 1;
         pointer-events: auto;
         visibility: visible;
-        transform: translateX(100%);
+        transform: translateX(0);
     }
 
 
@@ -277,3 +282,56 @@ BELOW 580PX (PHONES)
         grid-row: 1;
     }
 }
+
+
+
+/* FIXING FLEXBOX ISSUES IN SAFARI */
+
+.no-flexbox-gap .main-nav-list li:not(:last-child) {
+    margin-right: 4.8rem;
+  }
+
+  .no-flexbox-gap .list-item:not(:last-child) {
+    margin-bottom: 1.6rem;
+  }
+
+  .no-flexbox-gap .list-icon:not(:last-child) {
+    margin-right: 1.6rem;
+  }
+
+  .no-flexbox-gap .delivered-faces {
+    margin-right: 1.6rem;
+  }
+
+  .no-flexbox-gap .meal-attribute:not(:last-child) {
+    margin-bottom: 2rem;
+  }
+
+  .no-flexbox-gap .meal-icon {
+    margin-right: 1.6rem;
+  }
+
+  .no-flexbox-gap .footer-row div:not(:last-child) {
+    margin-right: 6.4rem;
+  }
+
+  .no-flexbox-gap .social-links li:not(:last-child) {
+    margin-right: 2.4rem;
+  }
+
+  .no-flexbox-gap .footer-nav li:not(:last-child) {
+    margin-bottom: 2.4rem;
+  }
+
+  @media (max-width: 75em) {
+    .no-flexbox-gap .main-nav-list li:not(:last-child) {
+      margin-right: 3.2rem;
+    }
+  }
+
+  @media (max-width: 59em) {
+    .no-flexbox-gap .main-nav-list li:not(:last-child) {
+      margin-right: 0;
+      margin-bottom: 4.8rem;
+    }
+  }
