--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ HEADER SECTION
 
     /* because we want to sticky later */
     height: 9.6rem;
-    padding: 4.8rem;
+    padding: 0 4.8rem;
     position: relative;
 }
 
@@ -65,12 +65,30 @@ NAVIGATION
 .icon-mobile-nav {
     height: 4.8rem;
     width: 4.8rem;
-    color: #777;
+    color: #333;
 }
 
 .icon-mobile-nav[name="close-outline"] {
     display: none;
 }
+
+.sticky .header {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  height: 8rem;
+  padding-top: 0;
+  padding-bottom: 0;
+  z-index: 999;
+  background-color: rgba(255, 255, 255, 0.97);
+  box-shadow: 0 1.2rem 3.2rem rgba(0, 0, 0, 0.03);
+}
+
+.sticky .section-hero {
+  margin-top: 9.6rem;
+}
+
 
 /*****************
 /* HERO SECTION */
